Fixed scrollbar color

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,7 +26,7 @@ body
 
 html
 {
-	scrollbar-color: var(--color) transparent;
+	scrollbar-color: var(--primary) #C6FFDD;
 	scrollbar-width: thin;
 }
 
